fix(ButtonGroup): fixes desktop alignment

--- a/src/components/ButtonGroup/style.css
+++ b/src/components/ButtonGroup/style.css
@@ -23,7 +23,7 @@
     justify-content: center;
   }
 
-  .e-button-group > *:not(:last-child) {
+  .e-button-group > *:not(:first-child) {
     margin-right: var(--e-space-3);
   }
 }
